menambah main 1 index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>E Ten's Bites</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <!-- Body -->
@@ -19,7 +20,17 @@
     </header>
 
     <!-- Main1 -->
-
+        <div class="top-wrapper">
+            <div class="container">
+                <h1>E Ten's Bites</h1>
+                <h1>Sweeten Your Day</h1>
+                <p>E Ten's Bites adalah bakery yang menyediakan berbagai dessert yang manis dan lezat.</p>
+                <p>Tersedia berbagai jenis custard, puding, dessert beku, kue, biskuit, pai, cokelat, permen, serta pastry.</p>
+                <div class="btn-wrapper">
+                    <a href="#" class="btn-Pesan"><i class="material-icons"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></i>Pesan Sekarang</a>
+                </div>
+            </div>
+        </div>
     <!-- Main2 -->
 
     <!-- Main3 -->
