--- a/index.html
+++ b/index.html
@@ -1,158 +1,34 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E Ten's</title>
-  <link rel="stylesheet" href="stylesheet.css">
-  <link rel="stylesheet" href="responsive.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-</head>
-
-<!-- Body -->
-
-<body>
-  <!-- Header -->
-  <header>
-
-  </header>
-
-  <!-- Main1 -->
-  <div class="top-wrapper">
-    <div class="container">
-      <div class="main1">
-        <h1>E Ten's Bites</h1>
-        <h1>Sweeten Your Day</h1>
-        <p>E Ten's Bites adalah bakery yang menyediakan berbagai dessert yang manis dan lezat.</p>
-        <p>Tersedia berbagai jenis custard, puding, dessert beku, kue, biskuit, pai, cokelat, permen, serta pastry.</p>
-        <div class="btn-wraper">
-          <a href="#" class="btn-Pesan"><i class="material-icons"><i class="fa fa-cart-arrow-down"
-                aria-hidden="true"></i></i>Pesan Sekarang</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Main2 -->
-
-    
-  <!-- Main3 -->
-  <div class="main3">
-    <div class="judul3">
-      <h2> Produk Kami</h2>
-
-      <div class="row">
-        <div class="produk kuea">
-          <img src="img/lilac-cupcake.png">
-          <p>Lilac Cupcake</p>
-          <p>Harga: Rp.45.000</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kueb">
-          <img src="img/mocha-cheese-cake.png">
-          <p>Mocha Cheese Cake</p>
-          <p>Harga: Rp.43.500</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kuec">
-          <img src="img/chocolla-velvet.png">
-          <p>Chocola Velvet</p>
-          <p>Harga: Rp.60.000</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#"><i class="fa fa-shopping-cart"></i></a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kued">
-          <img src="img/waffles-oreo.png">
-          <p>Waffles Oreo</p>
-          <p>Harga: Rp.29.000</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#"><i class="fa fa-shopping-cart"></i></a>
-          </div>
-          <p></p>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="produk kuef">
-          <img src="img/icecream-rainbow.png">
-          <p>Ice Cream Rainbow</p>
-          <p>Harga: Rp.35.000</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kueg">
-          <img src="img/raspberry-cupcake.png">
-          <p>Raspberry Cake</p>
-          <p>Harga: Rp.50.000</p>
-          <p></p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kueh">
-          <img src="img/lovely-mcaron.png">
-          <p>Lovely Macaron</p>
-          <p>Harga: Rp.35.000</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kuei">
-          <img src="img/blueberry-choco-cake.png">
-          <p>Blueberry Choco Cake</p>
-          <p>Harga: Rp.65.000</p>
-          <div class="btn-wrap">
-            <a class="btn kedua" href="#">Pesan</a>
-            <a class="btn kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-      </div>
-      <div class="btn-wrap">
-        <a class="btn lainnya" href="#">Produk Lainnya ></a>
-      </div>
-    </div>
-  </div>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-
-  </footer>
-
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>E Ten's Bites</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="responsive" href="responsive.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <div class="header-left">
+                    <a href="#">E Ten's</a>
+                </div>
+                <span class="fa fa-bars menu-icon"></span>
+                <div class="header-right">
+                    <div class="header-right-icon">
+                    </div>
+                    <a href="#">Menu</a>
+                    <a href="#">Lokasi</a>
+                    <a href="#">Tentang</a>
+                    <a href="#" class="Login">Log in</a>
+                    <a href="#"><i class="fa fa-shopping-cart"></i></a>
+                </div>
+            </div>
+            <div class="contact-search">
+                <input>
+                <input class="contact-submit" type="submit" value="Cari">
+            </div>
+        </header>
+    </body>
 </html>
