--- a/index.html
+++ b/index.html
@@ -49,7 +49,37 @@
 
 
   <!-- Main2 -->
-
+  <div class="main2">
+    <div class="judul2">
+      <h2> Keuntungan Belanja di Toko Kami </h2>
+  
+      <div class="lesson">
+        <div class="keuntungan belanja1">
+          <img src="img/protect.png" alt="">
+          <p>Higienis</p>
+          <p>Terbuat dari bahan alami dengan menggunakan bahan yang berkualitas</p>
+          <p></p>
+        </div>
+        <div class="keuntungan belanja2">
+          <img src="img/hand.png" alt="">
+          <p>Harga Terjangkau</p>
+          <p>Kami menjual aneka Dessert dengan harga yang terjangkau</p>
+          <p></p>
+        </div>
+        <div class="keuntungan belanja3">
+          <img src="img/delicious.png" alt="">
+          <p>Tasty</p>
+          <p>Delicous</p>
+          <p></p>
+        </div>
+        <div class="keuntungan belanja4">
+          <img src="img/sugar.png" alt="">
+          <p>Less Sugar</p>
+          <p>Dessert yang kami jual rendah gula</p>
+          <p></p>
+        </div>
+    </div>
+  </div>
 
   <!-- Main3 -->
   <div class="main3">
