--- a/index.html
+++ b/index.html
@@ -194,7 +194,40 @@
 
   <!-- Footer -->
   <footer>
-
+    <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="#" style="text-decoration:none;">About Us</a></li>
+              <li><a href="#" style="text-decoration:none;">Our Service</a></li>
+              <li><a href="#" style="text-decoration:none;">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Get Help</h4>
+            <ul>
+              <li><a href="#" style="text-decoration:none;">FAQ</a></li>
+              <li><a href="#" style="text-decoration:none;">Shipping</a></li>
+              <li><a href="#" style="text-decoration:none;">Order Status</a></li>
+              <li><a href="#" style="text-decoration:none;">Payment Options</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Follow Us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fa fa-facebook-f"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-whatsapp"></i></a>
+            </div>
+          </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          &copy; E Ten's 2021
+        </div>
+      </div>
   </footer>
 
 </body>
