--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <!-- Body -->
-
 <body>
+  
   <!-- Header -->
   <header>
     <div class="container">
@@ -33,7 +33,7 @@
   </header>
 
   <!-- Main1 -->
-  <div class="main1">
+  <div class="main1-wrapper">
     <div class="container">
       <h1>E Ten's Bites</h1>
       <h1>Sweeten Your Days<span class="titik"> .</span></h1>
@@ -47,155 +47,157 @@
   </div>
   </div>
 
-
   <!-- Main2 -->
-  <div class="main2">
+  <div class="main2-wrapper">
+    <div class="container"></div>
     <div class="judul2">
-      <h2> Keuntungan Belanja di Toko Kami </h2>
-  
-      <div class="lesson">
-        <div class="keuntungan belanja1">
-          <img src="img/protect.png" alt="">
-          <p>Higienis</p>
-          <p>Terbuat dari bahan alami dengan menggunakan bahan yang berkualitas</p>
-          <p></p>
-        </div>
-        <div class="keuntungan belanja2">
-          <img src="img/hand.png" alt="">
-          <p>Harga Terjangkau</p>
-          <p>Kami menjual aneka Dessert dengan harga yang terjangkau</p>
-          <p></p>
-        </div>
-        <div class="keuntungan belanja3">
-          <img src="img/delicious.png" alt="">
-          <p>Tasty</p>
-          <p>Delicous</p>
-          <p></p>
-        </div>
-        <div class="keuntungan belanja4">
-          <img src="img/sugar.png" alt="">
-          <p>Less Sugar</p>
-          <p>Dessert yang kami jual rendah gula</p>
-          <p></p>
-        </div>
+      <h2>Keuntungan Belanja di Toko Kami</h2>
     </div>
+    <div class="row">
+      <div class="kolom satu">
+        <span></span>
+        <h3>Higienis</h3>
+        <img src="img/protect.png">
+        <p>Terbuat dari bahan alami dengan menggunakan bahan yang berkualitas</p>
+        <p></p>
+      </div>
+      <div class="kolom dua">
+        <span></span>
+        <h3>Harga Terjangkau</h3>
+        <img src="img/hand.png">
+        <p>Kami menjual aneka Dessert dengan harga yang bersahabat dengan anda</p>
+        <p></p>
+      </div>
+      <div class="kolom tiga">
+        <span></span>
+        <h3>Enak</h3>
+        <img src="img/delicious.png">
+        <p>Sejumlah besar pelanggan kami setuju bahwa dessert ditoko kmi memiliki rasa yang enak dan khas</p>
+      </div>
+      <div class="kolom empat">
+        <span></span>
+        <h3>Terpercaya</h3>
+        <img src="img/sugar.png">
+        <p>Toko kami telah dipercaya oleh ribuan pelanggan </p>
+      </div>
+    </div>
+  </div>
   </div>
 
   <!-- Main3 -->
   <div class="main3">
     <div class="judul3">
-      <h2> Produk Kami</h2>
+      <div class="container">
+        <h2> Produk Kami</h2>
 
-      <div class="row">
-        <div class="produk kuea">
-          <img src="img/lilac-cupcake.png">
-          <p>Lilac Cupcake</p>
-          <p>Harga: Rp.45.000</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kueb">
-          <img src="img/mocha-cheese-cake.png">
-          <p>Mocha Cheese Cake</p>
-          <p>Harga: Rp.43.500</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kuec">
-          <img src="img/chocolla-velvet.png">
-          <p>Chocola Velvet</p>
-          <p>Harga: Rp.60.000</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#"><i class="fa fa-shopping-cart"></i></a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kued">
-          <img src="img/waffles-oreo.png">
-          <p>Waffles Oreo</p>
-          <p>Harga: Rp.29.000</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#"><i class="fa fa-shopping-cart"></i></a>
-          </div>
-          <p></p>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="produk kuef">
-          <img src="img/icecream-rainbow.png">
-          <p>Ice Cream Rainbow</p>
-          <p>Harga: Rp.35.000</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kueg">
-          <img src="img/raspberry-cupcake.png">
-          <p>Raspberry Cake</p>
-          <p>Harga: Rp.50.000</p>
-          <p></p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kueh">
-          <img src="img/lovely-mcaron.png">
-          <p>Lovely Macaron</p>
-          <p>Harga: Rp.35.000</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-        <div class="produk kuei">
-          <img src="img/blueberry-choco-cake.png">
-          <p>Blueberry Choco Cake</p>
-          <p>Harga: Rp.65.000</p>
-          <div class="btn-wrap">
-            <a class="btn2 kedua" href="#">Pesan</a>
-            <a class="btn2 kedua" href="#">
-              <i class="fa fa-shopping-cart"></i>
-            </a>
-          </div>
-          <p></p>
-        </div>
-      </div>
-      <div class="btn-wrap">
-        <a class="btn2 lainnya" href="#">Produk Lainnya ></a>
-      </div>
-    </div>
-  </div>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
         <div class="row">
+          <div class="produk kuea">
+            <img src="img/lilac-cupcake.png">
+            <p>Lilac Cupcake</p>
+            <p>Harga: Rp.45.000</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#">
+                <i class="fa fa-shopping-cart"></i>
+              </a>
+            </div>
+            <p></p>
+          </div>
+          <div class="produk kueb">
+            <img src="img/mocha-cheese-cake.png">
+            <p>Mocha Cheese Cake</p>
+            <p>Harga: Rp.43.500</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#">
+                <i class="fa fa-shopping-cart"></i>
+              </a>
+            </div>
+            <p></p>
+          </div>
+          <div class="produk kuec">
+            <img src="img/chocolla-velvet.png">
+            <p>Chocola Velvet</p>
+            <p>Harga: Rp.60.000</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+            <p></p>
+          </div>
+          <div class="produk kued">
+            <img src="img/waffles-oreo.png">
+            <p>Waffles Oreo</p>
+            <p>Harga: Rp.29.000</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="produk kuef">
+              <img src="img/icecream-rainbow.png">
+              <p>Ice Cream Rainbow</p>
+              <p>Harga: Rp.35.000</p>
+              <div class="btn-wrap">
+                <a class="btn2 kedua" href="#">Pesan</a>
+                <a class="btn2 kedua" href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                </a>
+              </div>
+              <p></p>
+            </div>
+            <div class="produk kueg">
+              <img src="img/raspberry-cupcake.png">
+              <p>Raspberry Cake</p>
+              <p>Harga: Rp.50.000</p>
+              <p></p>
+              <div class="btn-wrap">
+                <a class="btn2 kedua" href="#">Pesan</a>
+                <a class="btn2 kedua" href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                </a>
+              </div>
+              <p></p>
+            </div>
+            <div class="produk kueh">
+              <img src="img/lovely-mcaron.png">
+              <p>Lovely Macaron</p>
+              <p>Harga: Rp.35.000</p>
+              <div class="btn-wrap">
+                <a class="btn2 kedua" href="#">Pesan</a>
+                <a class="btn2 kedua" href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                </a>
+              </div>
+              <p></p>
+            </div>
+            <div class="produk kuei">
+              <img src="img/blueberry-choco-cake.png">
+              <p>Blueberry Choco Cake</p>
+              <p>Harga: Rp.65.000</p>
+              <div class="btn-wrap">
+                <a class="btn2 kedua" href="#">Pesan</a>
+                <a class="btn2 kedua" href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                </a>
+              </div>
+              <p></p>
+            </div>
+          </div>
+          <div class="btn-wrap">
+            <a class="btn2 lainnya" href="#">Produk Lainnya ></a>
+          </div>
+        </div>
+      </div>
+<!-- FOOTER -->
+      <footer>
+        <div class="container"></div>
+        <div class="kol">
           <div class="footer-col">
             <h4>Company</h4>
             <ul>
@@ -222,14 +224,16 @@
               <a href="#"><i class="fa fa-whatsapp"></i></a>
             </div>
           </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-          &copy; E Ten's 2021
+          <div class="footer-col">
+            <h4>Other</h4>
+          </div>
         </div>
-      </div>
-  </footer>
-
+        <div class="footer-copyright">
+          <div class="container">
+            &copy; E Ten's 2021
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
