--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <!-- Body -->
+
 <body>
-  
   <!-- Header -->
   <header>
     <div class="container">
@@ -85,6 +85,7 @@
   </div>
 
   <!-- Main3 -->
+
   <div class="main3">
     <div class="judul3">
       <div class="container">
@@ -136,65 +137,67 @@
             <p></p>
           </div>
         </div>
+      </div>
 
-        <div class="container">
-          <div class="row">
-            <div class="produk kuef">
-              <img src="img/icecream-rainbow.png">
-              <p>Ice Cream Rainbow</p>
-              <p>Harga: Rp.35.000</p>
-              <div class="btn-wrap">
-                <a class="btn2 kedua" href="#">Pesan</a>
-                <a class="btn2 kedua" href="#">
-                  <i class="fa fa-shopping-cart"></i>
-                </a>
-              </div>
-              <p></p>
+      <div class="container">
+        <div class="row">
+          <div class="produk kuef">
+            <img src="img/icecream-rainbow.png">
+            <p>Ice Cream Rainbow</p>
+            <p>Harga: Rp.35.000</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#">
+                <i class="fa fa-shopping-cart"></i>
+              </a>
             </div>
-            <div class="produk kueg">
-              <img src="img/raspberry-cupcake.png">
-              <p>Raspberry Cake</p>
-              <p>Harga: Rp.50.000</p>
-              <p></p>
-              <div class="btn-wrap">
-                <a class="btn2 kedua" href="#">Pesan</a>
-                <a class="btn2 kedua" href="#">
-                  <i class="fa fa-shopping-cart"></i>
-                </a>
-              </div>
-              <p></p>
-            </div>
-            <div class="produk kueh">
-              <img src="img/lovely-mcaron.png">
-              <p>Lovely Macaron</p>
-              <p>Harga: Rp.35.000</p>
-              <div class="btn-wrap">
-                <a class="btn2 kedua" href="#">Pesan</a>
-                <a class="btn2 kedua" href="#">
-                  <i class="fa fa-shopping-cart"></i>
-                </a>
-              </div>
-              <p></p>
-            </div>
-            <div class="produk kuei">
-              <img src="img/blueberry-choco-cake.png">
-              <p>Blueberry Choco Cake</p>
-              <p>Harga: Rp.65.000</p>
-              <div class="btn-wrap">
-                <a class="btn2 kedua" href="#">Pesan</a>
-                <a class="btn2 kedua" href="#">
-                  <i class="fa fa-shopping-cart"></i>
-                </a>
-              </div>
-              <p></p>
-            </div>
+            <p></p>
           </div>
+          <div class="produk kueg">
+            <img src="img/raspberry-cupcake.png">
+            <p>Raspberry Cake</p>
+            <p>Harga: Rp.50.000</p>
+            <p></p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#">
+                <i class="fa fa-shopping-cart"></i>
+              </a>
+            </div>
+            <p></p>
+          </div>
+          <div class="produk kueh">
+            <img src="img/lovely-mcaron.png">
+            <p>Lovely Macaron</p>
+            <p>Harga: Rp.35.000</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#">
+                <i class="fa fa-shopping-cart"></i>
+              </a>
+            </div>
+            <p></p>
+          </div>
+          <div class="produk kuei">
+            <img src="img/blueberry-choco-cake.png">
+            <p>Blueberry Choco Cake</p>
+            <p>Harga: Rp.65.000</p>
+            <div class="btn-wrap">
+              <a class="btn2 kedua" href="#">Pesan</a>
+              <a class="btn2 kedua" href="#">
+                <i class="fa fa-shopping-cart"></i>
+              </a>
+            </div>
+            <p></p>
+          </div>
+          <!-- </div> -->
           <div class="btn-wrap">
             <a class="btn2 lainnya" href="#">Produk Lainnya ></a>
           </div>
         </div>
       </div>
-<!-- FOOTER -->
+      <!-- </div> -->
+
       <footer>
         <div class="container"></div>
         <div class="kol">
